<resources>
    <string name="app_name">App_LuckyNumber</string>
    <string name="title">Lucky Number</string>
    <string name="input">Input a Number</string>
    <string name="button_submit">Submit</string>
    <string name="too_big">Too Big</string>
    <string name="too_small">Too Small</string>
    <string name="bingo">Bingo</string>
    <string name="ok">OK</string>
    <string name="replay">Raplay</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancal</string>
</resources>